# cyberchipped-python

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  python-test.yml
cyberchipped/: ai.py  settings.py
cyberchipped/assistants/: runs.py
cyberchipped/components/: __init__.py  ai_function.py
cyberchipped/tools/: github.py  retrieval.py
cyberchipped/utilities/: logging.py  slack.py
examples/basic_assistant/: Pipfile  README.md  main.py
examples/multi_components/: .gitignore  README.md  main.py  main_test.py  pyproject.toml
examples/multi_thread_assistant/: README.md  main.py  main_test.py
examples/single_thread_assistant/: main.py
examples/threaded_assistant/: README.md  main.py
examples/threaded_web_assistant/: Pipfile  README.md  dev.sh  main.py
examples/tool_assistant/: README.md  main.py
examples/web_assistant/: Pipfile  README.md  main.py  pyproject.toml
src/stablethread/: requests.py  serializers.py
src/stablethread/assistants/: README.md  __init__.py  assistants.py
src/stablethread/components/: ai_model.py  prompt.py
src/stablethread/utilities/: __init__.py  jinja.py  logging.py  slack.py  tools.py
src/tests/: test_settings.py
src/tests/components/: test_ai_classifier.py  test_ai_functions.py  test_ai_model.py
stablethread/: __init__.py  ai.py  settings.py
stablethread/assistants/: __init__.py  runs.py  threads.py
stablethread/components/: ai_classifier.py  ai_function.py
stablethread/tools/: assistants.py  github.py  retrieval.py
stablethread/utilities/: __init__.py  openai.py
tests/: test_ai.py
tests/helpers/: main.py  main_test.py
tests/multi_modal_assistant/: main.py
tests/multi_thread_assistant/: main.py  main_test.py
tests/single_thread_assistant/: main.py  main_test.py
tests/voice_assistant/: dev.sh  main.py  pyproject.toml
tests/web_assistant/: README.md
