[tool.poetry]
name = "stablethread"
version = "0.0.1"
description = "The best AI framework to create OpenAI Assistants"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/bevanhunt/stablethread"
keywords = ["ai", "openai"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
httpx = ">=0.24.1"
jinja2 = ">=3.1.2"
jsonpatch = ">=1.33"
openai = ">=1.1.0"
pydantic = ">=2.4.2"
pydantic_settings = "*"
rich = ">=12"
tiktoken = ">=0.4.0"
typer = ">=0.9.0"
tzdata = ">=2023.3"
uvicorn = ">=0.22.0"

[tool.poetry.dev-dependencies]
datamodel-code-generator = ">=0.20.0"
pdbpp = "~0.10"
pydantic = {extras = ["dotenv"], version = "*"}
ruff = "*"
pytest-asyncio = "~0.20"
pytest-env = ">=0.8,<2.0"
pytest-rerunfailures = ">=10,<13"
pytest-sugar = "~0.9"
pytest = "~7.3.1"
pytest-timeout = "*"
numpy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.layout]
packages = [{ include = "src/stablethread", from = "." }]
