[tool.poetry]
name = "test"
version = "0.1.0"
description = "Your package description"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "*"
uvicorn = "*"
python-dotenv = "*"
cyberchipped = {path = "../..", develop = true}

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-watch = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"